abriellacare/rasabotchat/stderr.log
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
[UID:1750][1711374] Child process with pid: 1711425 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
[UID:1750][1711374] Child process with pid: 1712367 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
[UID:1750][1711374] Child process with pid: 1715964 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
[UID:1750][1711374] Child process with pid: 1716108 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/abriella/abriellacare.com/rasabotchat/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def app.py(environ, start_response):
           ^
SyntaxError: invalid syntax
[UID:1750][3128676] Child process with pid: 3128721 was killed by signal: 15, core dump: 0
